# phpx

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  ChangeLog.md  DEBUG_FEATURES.md  DEBUG_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  Makefile  README-CN.md  README.md  build.sh  codecov.yml  composer.json  echo.php  extension.cpp  format.sh  make_phpx.sh  phpunit.xml  phpx.h
.github/workflows/: embed.yml  ext.yml  lib.yml  test.yml
console/: composer.json  console.php  create_bin.sh  create_ext.sh  php.ini
console/src/: Builder.php
docs/: README.md  api-reference.md  architecture.md  best-practices.md  core-classes.md  debugging-guide.md  debugging-quick-reference.md  examples-guide.md  functions.md  overview.md  quickstart.md  testing-guide.md
examples/: Makefile  echo.php  embed.cpp  extension.cpp  rocksdb  test.cpp  test.php
examples/bloom_filter/: .gitignore  BloomFilter.cpp  CMakeLists.txt  Makefile  README.md  project.json
examples/cpp_ext/: .config.json  Makefile
examples/embed/: CMakeLists.txt  Makefile  embed.cc  project.json
examples/embed/src/: embed.cc
examples/gtk/: .gitignore  CMakeLists.txt  Makefile  gtk.cc  main.php  project.json  test.cc  test.glade
examples/gtk/src/: gtk.cc  gtk.stub.php  gtk_arginfo.h  gtk_legacy_arginfo.h
examples/php/: count.php  empty.php  ref.php
examples/queue/: CMakeLists.txt  CmakeLists.txt  Makefile  README.md  project.json  queue.cpp  queue.h  run-tests.php
examples/rocksdb/: .gitignore  CMakeLists.txt  Makefile  rocksdb.cpp  test.php
examples/swoole/: tcp.php
examples/test/: Makefile  class_def.php  dispatch.php  echo.php  empty.php  immutable.php  include.php  run.php  test.cpp  test.php  test4.php
include/: embed.h  phpx.h  phpx_big_float.h  phpx_big_int.h  phpx_builtin_func.h  phpx_class.h  phpx_compat.h  phpx_const.h  phpx_decimal.h  phpx_embed.h  phpx_ext.h  phpx_func.h  phpx_helper.h  phpx_literal_string.h  phpx_math.h  phpx_operator.h  phpx_scope_guard.h  phpx_std.h  phpx_std_array.h  phpx_types.h
include/class/: bcmath.h  core.h  curl.h  date.h  dom.h  fileinfo.h  gd.h  hash.h  json.h  libxml.h  mysqli.h  openssl.h  pcntl.h  pdo.h  pdo_mysql.h  pdo_sqlite.h  phar.h  random.h  redis.h  reflection.h  session.h  shmop.h  simplexml.h  sockets.h  sodium.h  spl.h  sqlite3.h  standard.h  swoole.h  tokenizer.h  xml.h  xmlreader.h  xmlwriter.h  xsl.h  zip.h  zlib.h
include/const/: calendar.h  core.h  curl.h  date.h  dom.h  exif.h  fileinfo.h  filter.h  gd.h  hash.h  iconv.h  json.h  libxml.h  mbstring.h  mysqli.h  openssl.h  pcntl.h  pcre.h  posix.h  random.h  session.h  sockets.h  sodium.h  sqlite3.h  standard.h  swoole.h  tokenizer.h  xml.h  xsl.h  zlib.h
include/func/: bcmath.h  bz2.h  calendar.h  core.h  ctype.h  curl.h  date.h  dom.h  exif.h  fileinfo.h  filter.h  gd.h  gettext.h  hash.h  iconv.h  json.h  libxml.h  mbstring.h  mysqli.h  openssl.h  pcntl.h  pcre.h  pdo.h  posix.h  random.h  session.h  shmop.h  simplexml.h  sockets.h  sodium.h  spl.h  standard.h  swoole.h  tokenizer.h  xml.h  xmlwriter.h  zip.h  zlib.h
include/std/: array.h  core.h  datetime.h  fs.h  math.h  misc.h  string.h
script/: gen.php  gen_stub.php  pack.php
src/: Makefile  array.cc  base.cc  base.cpp  class.cc  exec.cc  extension.cc  function.cc  hash.cc  object.cc  string.cc  variant.cc
src/class/: bcmath.cc  core.cc  core.h  curl.cc  curl.h  date.cc  date.h  dom.cc  dom.h  fileinfo.cc  fileinfo.h  gd.cc  hash.cc  hash.h  json.cc  json.h  libxml.cc  mysqli.cc  openssl.cc  pcntl.cc  pdo.cc  pdo.h  pdo_mysql.cc  pdo_sqlite.cc  phar.cc  phar.h  random.cc  random.h  redis.cc  redis.h  reflection.cc  reflection.h  session.cc  session.h  shmop.cc  simplexml.cc  simplexml.h  sockets.cc  sodium.cc  spl.cc  (+17 more)
src/const/: calendar.cc  core.cc  curl.cc  date.cc  dom.cc  exif.cc  fileinfo.cc  filter.cc  gd.cc  hash.cc  iconv.cc  json.cc  libxml.cc  mbstring.cc  mysqli.cc  openssl.cc  pcntl.cc  pcre.cc  posix.cc  random.cc  session.cc  sockets.cc  sodium.cc  sqlite3.cc  standard.cc  swoole.cc  tokenizer.cc  xml.cc  xsl.cc  zlib.cc
src/core/: array.cc  base.cc  big_float.cc  big_int.cc  caller.cc  class.cc  closure.cc  decimal.cc  extension.cc  foreach_iterator.cc  hash.cc  helper.cc  indirect.cc  literal_string.cc  object.cc  string.cc  variant.cc
src/func/: bcmath.cc  bz2.cc  calendar.cc  core.cc  ctype.cc  curl.cc  date.cc  dom.cc  exif.cc  fileinfo.cc  filter.cc  filter.h  gd.cc  gettext.cc  hash.cc  iconv.cc  json.cc  json.h  libxml.cc  mbstring.cc  mysqli.cc  openssl.cc  openssl.h  pcntl.cc  pcre.cc  pdo.cc  posix.cc  random.cc  session.cc  shmop.cc  simplexml.cc  sockets.cc  sodium.cc  spl.cc  standard.cc  swoole.cc  tokenizer.cc  xml.cc  xmlwriter.cc  xsl.cc  (+3 more)
src/misc/: main.cc  php_aot_fiber_generator.cc  php_aot_fiber_generator.h  php_aot_helper.h  php_cli_process_title.c  php_std_array.cpp  php_std_array.h  php_std_core.cpp  php_std_core.h  php_std_datetime.cpp  php_std_datetime.h  php_std_fs.cpp  php_std_fs.h  php_std_math.cpp  php_std_math.h  php_std_misc.cpp  php_std_misc.h  php_std_string.cpp  php_std_string.h  php_std_url.cpp  php_std_url.h  ps_title.c  typephp_fiber_generator.cc  (+4 more)
tests/: CMakeLists.txt  bootstrap.php
tests/ext/: dump.php  echo.php  extension.cpp  extension.stub.php  extension_arginfo.h  project.json
tests/ext/src/: extension.cpp
tests/include/: bigfloat_test_data.h  bigint_test_data.h  decimal_test_data.h  library.php  phpx_test.h  return_const.php  throw_error.php
tests/src/: array.cpp  array_converter.cpp  array_extra.cpp  array_slice.cpp  base.cpp  base_extra.cpp  big_float.cpp  big_int.cpp  big_int_bit.cpp  box.cpp  caller.cpp  class_facade.cpp  closure.cpp  debug_info.cpp  decimal.cpp  decimal_adv.cpp  empty.cpp  enum_case.cpp  exec.cpp  exists.cpp  facade.cpp  foreach_iterator.cpp  func_facade.cpp  function.cpp  hash.cpp  helper.cpp  helper_misc.cpp  isset.cpp  json.cpp  main.cpp  object.cpp  object_ctor.cpp  object_extra.cpp  operator.cpp  safe_index.cpp  same.cpp  std_array_test.cpp  std_container.cpp  std_core_test.cpp  std_math_test.cpp  (+8 more)
tests/unit/: BaseTest.php
(+53 files in other folders)
